@@ -3,68 +3,56 @@ package com.xiaoyue.celestial_invoker.invoker.config;
 import com.tterrag.registrate.AbstractRegistrate;
 import com.tterrag.registrate.providers.ProviderType;
 import com.tterrag.registrate.util.RegistrateDistExecutor;
-import com.xiaoyue.celestial_invoker.content.common.DirectCompare;
 import com.xiaoyue.celestial_invoker.content.common.SimpleInvoker;
 import com.xiaoyue.celestial_invoker.content.common.helper.StringHelper;
 import net.neoforged.api.distmarker.Dist;
+import net.neoforged.fml.ModContainer;
 import net.neoforged.fml.config.ModConfig;
 import net.neoforged.neoforge.common.ModConfigSpec;
 import net.neoforged.neoforge.common.data.LanguageProvider;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
-import java.util.function.BiFunction;
-import java.util.function.Function;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.TreeMap;
 
 public class ConfigHolderMap {
 
-    private final Map<ModConfig.Type, List<Function<ModConfigSpec.Builder, ?>>> EXTRA_CONFIGS = new HashMap<>();
+    private final String modid;
 
-    private Map<String, Map<String, ConfigHolder<?>>> COMMON_MAP = new TreeMap<>();
-    private Map<String, Map<String, ConfigHolder<?>>> SERVER_MAP = new TreeMap<>();
-    private Map<String, Map<String, ConfigHolder<?>>> CLIENT_MAP = new TreeMap<>();
-    private Map<String, Map<String, ConfigHolder<?>>> STARTUP_MAP = new TreeMap<>();
+    private final Map<String, Map<String, ConfigHolder<?>>> COMMON_MAP = new TreeMap<>();
+    private final Map<String, Map<String, ConfigHolder<?>>> SERVER_MAP = new TreeMap<>();
+    private final Map<String, Map<String, ConfigHolder<?>>> CLIENT_MAP = new TreeMap<>();
+    private final Map<String, Map<String, ConfigHolder<?>>> STARTUP_MAP = new TreeMap<>();
 
     public final Map<String, String> TITLE_MAP = new TreeMap<>();
     public final Map<String, ConfigHolder<?>> TEXT_MAP = new TreeMap<>();
 
     public Map<ModConfig.Type, String> configPath = new HashMap<>();
 
-    public ConfigHolderMap compare(BiFunction<String, String, Integer> func) {
-        this.COMMON_MAP = new TreeMap<>(new DirectCompare(func));
-        this.SERVER_MAP = new TreeMap<>(new DirectCompare(func));
-        this.CLIENT_MAP = new TreeMap<>(new DirectCompare(func));
-        this.STARTUP_MAP = new TreeMap<>(new DirectCompare(func));
-        return this;
+    public ConfigHolderMap(String modid) {
+        this.modid = modid;
     }
 
-    public void initCelestialConfigs(ModConfig.Type type) {
-        this.initConfigs(type, "celestial_configs/" + ConfigLoader.getConfigName(type));
+    public ConfigHolderMap initCelestialConfigs(ModConfig.Type type) {
+        return this.initConfigs(type, "celestial_configs/" + ConfigLoader.getConfigName(type, modid));
     }
 
-    public void initConfigs(ModConfig.Type type) {
-        this.initConfigs(type, ConfigLoader.getConfigName(type));
+    public ConfigHolderMap initConfigs(ModConfig.Type type) {
+        return this.initConfigs(type, ConfigLoader.getConfigName(type, modid));
     }
 
-    public void initConfigs(ModConfig.Type type, String fileName) {
+    public ConfigHolderMap initConfigs(ModConfig.Type type, String fileName) {
         ModConfigSpec.Builder builder = new ModConfigSpec.Builder();
-        String title = SimpleInvoker.getActiveModId() + ".configuration.";
+        String title = modid + ".configuration.";
         TITLE_MAP.put(title + "title", StringHelper.caseSpaceCapitalize(title));
         this.applyConfig(type, builder, title);
-        if (!EXTRA_CONFIGS.isEmpty()) {
-            EXTRA_CONFIGS.forEach((extraType, func) -> {
-                if (extraType.equals(type)) func.forEach(builder::configure);
-            });
-        }
-        SimpleInvoker.getActiveMod().registerConfig(type, builder.build(), fileName);
-        String key = title + "section." + fileName.replace("-", ".");
-        TITLE_MAP.put(key, ConfigLoader.getConfigTypeText(type));
+        ModContainer mod = SimpleInvoker.getMod(modid);
+        mod.registerConfig(type, builder.build(), fileName);
+        String key = title + "section." + fileName.replaceAll("[-_/]", ".");
+        TITLE_MAP.put(key, ConfigLoader.getConfigTypeText(type, modid));
         configPath.put(type, fileName);
-    }
-
-    @SafeVarargs
-    public final ConfigHolderMap addExtra(ModConfig.Type type, Function<ModConfigSpec.Builder, ?>... extraConfig) {
-        this.EXTRA_CONFIGS.put(type, Arrays.stream(extraConfig).toList());
+        ConfigLoader.initConfigScreen(mod);
         return this;
     }
 
@@ -93,21 +81,25 @@ public class ConfigHolderMap {
         }
     }
 
-    public void addConfig(String category, ConfigHolder<?> holder, ModConfig.Type type) {
+    public void addConfig(String[] category, ConfigHolder<?> holder, ModConfig.Type type) {
+        String key = category[0];
         Map<String, Map<String, ConfigHolder<?>>> map = this.getMap(type);
-        if (map.containsKey(category)) {
-            (map.get(category)).put(holder.getId(), holder);
+        if (map.containsKey(key)) {
+            (map.get(key)).put(holder.getId(), holder);
         } else {
+            if (!key.isEmpty()) {
+                TITLE_MAP.put(key, category[1]);
+            }
             Map<String, ConfigHolder<?>> defMap = new TreeMap<>();
             defMap.put(holder.getId(), holder);
-            map.put(category, defMap);
+            map.put(key, defMap);
         }
     }
 
     public void addConfigDesc(LanguageProvider pvd) {
-        ConfigHolder.CACHE.TEXT_MAP.forEach((key, config) -> {
+        TEXT_MAP.forEach((key, config) -> {
             pvd.add(key, config.getName());
-            StringBuilder finalText = new StringBuilder(config.getTexts().get(0));
+            StringBuilder finalText = new StringBuilder(config.getTexts().getFirst());
             if (!config.getRangeText().isEmpty()) {
                 config.getTexts().add(config.getRangeText());
             }
@@ -120,10 +112,11 @@ public class ConfigHolderMap {
         });
     }
 
-    public void generatorLang(AbstractRegistrate<?> registrate) {
+    public ConfigHolderMap generatorLang(AbstractRegistrate<?> registrate) {
         RegistrateDistExecutor.unsafeRunWhenOn(Dist.CLIENT, () -> () -> registrate.addDataGenerator(ProviderType.LANG, pvd -> {
             TITLE_MAP.forEach(pvd::add);
             addConfigDesc(pvd);
         }));
+        return this;
     }
 }
